update title in sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div id="song-tree"></div>
     </section>
     <aside id="song-sidebar">
-        <h1>Soundboard</h1>
+        <h1>Ollie's Soundboard</h1>
         <h2 id="song-title">Choose a song</h2>
         <div id="song-buttons">
             <button id="previous-button">Previous</button>
