--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div id="song-tree"></div>
     </section>
     <aside id="song-sidebar">
-        <h1><a href="https://github.com/olliee2/soundboard">Ollie's Soundboard</a></h1>
+        <h1 id="soundboard-title"><a href="https://github.com/olliee2/soundboard">Ollie's Soundboard</a></h1>
         <h2 id="song-title">Choose a song</h2>
         <div id="song-controls-container">
             <button class="player-button" id="previous-button"><img alt="Previous Song" src="previous.svg"></button>
