feat: update keyboard shortcuts in popup dialog for improved user guidance

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,15 @@
         <button id="close-modal" onclick="// noinspection JSUnresolvedReference
 document.getElementById('shortcuts-popup').close()">X
         </button>
+        <h1>Keyboard Shortcuts</h1>
         <ul>
-            <li>← Skip back 10 seconds</li>
-            <li>← Skip forwards 10 seconds</li>
+            <li>Space or ; - Toggle playback</li>
+            <li>K - Previous song</li>
+            <li>L - Next song</li>
+            <li>S - Shuffle queue</li>
+            <li>← - Skip back 10 seconds</li>
+            <li>→ - Skip forwards 10 seconds</li>
+            <li>/ - Focus filter bar</li>
         </ul>
     </dialog>
     <section id="song-selector">
